--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
   "dependencies": {
+    "@types/gulp": "^4.0.8",
+    "@types/ramda": "^0.27.40",
     "dot-into": "^1.0.2",
     "elm": "^0.19.1-5",
     "elm-format": "^0.8.5",
     "elm-live": "^4.0.2",
     "gulp": "^4.0.2",
     "prettier": "^2.2.1",
-    "ramda": "^0.27.1"
+    "ramda": "^0.27.1",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.2.4"
   },
   "scripts": {
     "build": "gulp build"
