--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,11 @@
     "strict": true,
     "resolveJsonModule": true,
     "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true
+    "forceConsistentCasingInFileNames": true,
+    "noUncheckedIndexedAccess": true,
+    "noFallthroughCasesInSwitch": true,
+    "noImplicitReturns": true,
+    "strictNullChecks": true
   },
   "include": ["*.ts", "source/**/*.ts", "source/**/*.d.ts"]
 }
