--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "dot-into": "^1.0.2",
     "elm": "^0.19.1-5",
     "elm-format": "^0.8.5",
-    "elm-live": "^4.0.2",
+    "elm-go": "^5.0.11",
     "gulp": "^4.0.2",
     "prettier": "^2.2.1",
     "ramda": "^0.27.1",
