--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@types/gulp": "^4.0.8",
     "@types/ramda": "^0.27.40",
+    "del": "^6.0.0",
     "dot-into": "^1.0.2",
     "elm": "^0.19.1-5",
     "elm-format": "^0.8.5",
