--- a/package.json
+++ b/package.json
@@ -1,20 +1,16 @@
 {
-  "dependencies": {
-    "@types/gulp": "^4.0.9",
-    "@types/ramda": "^0.28.15",
-    "del": "^6.0.0",
-    "dot-into": "^1.0.2",
-    "elm": "^0.19.1-5",
-    "elm-format": "^0.8.5",
-    "elm-go": "^5.0.16",
-    "gulp": "^4.0.2",
-    "prettier": "^2.4.1",
-    "ramda": "^0.28.0",
-    "ts-node": "^9.1.1",
-    "typescript": "^4.4.3"
-  },
   "scripts": {
-    "build": "gulp build"
+    "dev": "parcel ./source/index.html",
+    "build": "parcel build ./source/index.html"
+  },
+  "devDependencies": {
+    "@parcel/config-default": "^2.8.3",
+    "@parcel/core": "^2.8.3",
+    "@parcel/transformer-elm": "^2.8.3",
+    "elm": "npm:@lydell/elm@0.19.1-12",
+    "elm-format": "^0.8.6",
+    "parcel": "^2.8.3",
+    "prettier": "^2.8.4"
   },
   "private": true,
   "type": "module"
