--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "elm": "npm:@lydell/elm@0.19.1-12",
     "elm-format": "^0.8.6",
     "parcel": "^2.8.3",
+    "parcel-reporter-static-files-copy": "^1.5.0",
     "prettier": "^2.8.4"
   },
   "private": true,
